<resources>
    <string name="app_name">Droog</string>
    <string name="new_flashcard_activity_name">New Flashcard</string>
    <string name="flashcards_activity_name">Flashcards</string>
    <string name="quiz_activity_name">Quiz</string>
    <string name="quiz_results_activity_name">Quiz Results</string>
    <string name="main_menu_icon_desc">Smiling face greeting you on the main menu</string>
    <string name="main_menu_flashcards_button">Flashcards</string>
    <string name="main_menu_quiz_button">Quiz</string>
    <string name="main_menu_new_flashcard_button">New flashcard</string>
    <string name="main_menu_no_flashcards_warning">You must make some flashcards first!</string>
    <string name="main_menu_new_deck_button">New Deck</string>
    <string name="new_flashcard_word_1">Word 1</string>
    <string name="new_flashcard_word_2">Word 2</string>
    <string name="new_flashcard_auto_hints_checkbox">Automatic Hints</string>
    <string name="new_flashcard_custom_hint">Custom Hint</string>
    <string name="new_flashcard_icon_desc">Icon depicting the translation of the English word friend into Russian</string>
    <string name="new_flashcard_button">Add flashcard</string>
    <string name="new_flashcard_toast">New flashcard created!</string>
    <string name="new_flashcard_exists_toast">Flashcard already exists!</string>
    <string name="new_flashcard_load_from_file">Load from file</string>
    <string name="new_flashcard_exceeds_max_length_warning">Text cannot exceed 120 characters!</string>
    <string name="new_flashcard_edit_button_text">Save changes</string>
    <string name="edit_flashcard_icon_subtitle">Edit Flashcard</string>
    <string name="empty_text_field_warning">Please fill something in</string>
    <string name="flashcard_hint_button">Hint</string>
    <string name="flashcard_reveal_button">Reveal</string>
    <string name="flashcard_good_button">Good</string>
    <string name="flashcard_bad_button">Bad</string>
    <string name="flashcard_options_continue_text">Continue</string>
    <string name="flashcard_hint_insufficient_cards_warning">You must create at least 3 cards to use the hint option!</string>
    <string name="empty_string"></string>
    <string name="json_flashcard_first_word_tag">Word 1</string>
    <string name="json_flashcard_second_word_tag">Word 2</string>
    <string name="json_flashcard_hint_tag">Hint</string>
    <string name="json_flashcard_pair_rank_tag">PairRank</string>
    <string name="quiz_menu_subtitle">Duration:</string>
    <string name="quiz_menu_short_duration">Short - </string>
    <string name="quiz_menu_long_duration">Long - </string>
    <string name="quiz_menu_duration_suffix"> questions</string>
    <string name="quiz_menu_start_button">Start Quiz</string>
    <string name="quiz_menu_finish_button">Finish Quiz</string>
    <string name="quiz_menu_error_insufficient_data_short">You must create at least 10 word pairs to start a short quiz!</string>
    <string name="quiz_menu_error_insufficient_data_long">You must create at least 25 word pairs to start a long quiz!</string>
    <string name="quiz_results_result">Your score:</string>
    <string name="quiz_results_intent_count">QUESTION_COUNT</string>
    <string name="new_flashcard_from_file_title">Load flashcards from file</string>
    <string name="new_flashcard_from_file_desc">You can load multiple word pairs at once from a file rather than typing them all through the app. Simply type the word pairs up, one word on each line, with every second word corresponding to the word above it, like so:</string>
    <string name="from_file_eg_tree">tree</string>
    <string name="from_file_eg_baum">der Baum</string>
    <string name="from_file_eg_cat">cat</string>
    <string name="from_file_eg_katze">die Katze</string>
    <string name="from_file_eg_eye">eye</string>
    <string name="from_file_eg_auge">das Auge</string>
    <string name="new_deck_dialogue_title">Create New Deck</string>
    <string name="ellipsis">...</string>

</resources>
