<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/newFlashcardIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        android:contentDescription="@string/main_menu_icon_desc"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/newFlashcardWord1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorHint"
        android:ems="10"
        android:hint="@string/new_flashcard_word_1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/newFlashcardWord2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:textColorHint="@color/colorHint"
        android:ems="10"
        android:hint="@string/new_flashcard_word_2"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/charLimitWarningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorWarning"
        android:text="@string/new_flashcard_exceeds_max_length_warning"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/newFlashcardAutoHintsBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_flashcard_auto_hints_checkbox" />

    <EditText
        android:id="@+id/newFlashcardCustomHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorHint"
        android:ems="10"
        android:hint="@string/new_flashcard_custom_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/newFlashcardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_flashcard_button" />
</LinearLayout>