<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/quizResultsIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        android:contentDescription="@string/main_menu_icon_desc"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/quizResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorFont"
        android:text="@string/quiz_results_result"/>

    <TextView
        android:id="@+id/quizResultsScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:text=""
        android:textSize="24sp"
        android:textColor="@color/colorFont"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <Button
        android:id="@+id/quizFinishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/quiz_menu_finish_button" />
</LinearLayout>