<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorHint">

    <LinearLayout
        android:id="@+id/descriptionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_flashcard_from_file_title"
            android:textColor="@color/colorFont"
            android:textSize="20sp"
            android:layout_margin="20dp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_flashcard_from_file_desc"
            android:textColor="@color/colorFont"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/exampleFileBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/load_file_example_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFont"
            android:textSize="16sp"
            android:layout_margin="20dp">
        </TextView>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <Button
        android:id="@+id/loadFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/new_flashcard_load_from_file" />

</LinearLayout>